objects/IAM_Trigger_Switches__mdt.object
<CustomObject>
    <fields>
        <fullName>IAM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Loop_Count__c</fullName>
        <label>Loop Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Profile_to_skip_trigger_execution__c</fullName>
        <description>Field to populate user profiles to skip trigger execution</description>
        <inlineHelpText>If profile API name is mentioned in this field, trigger execution for that specific profiled user will skip. values need to be entered in Semi colon separated values</inlineHelpText>
        <label>Profile to skip trigger execution</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Record_Types_Names__c</fullName>
        <description>Field to store for which record types trigger should get executed.</description>
        <inlineHelpText>Field to store for which record types trigger should get executed. Enter values with ; seperated</inlineHelpText>
        <label>Record Types Names</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Skip_for_isBatchable_execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked then trigger will be skipped for execution</description>
        <inlineHelpText>If this field is checked then trigger will be skipped for execution</inlineHelpText>
        <label>Skip for isBatchable execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Skip_for_isFuture_execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked then trigger will be skipped for execution</description>
        <inlineHelpText>If this field is checked then trigger will be skipped for execution</inlineHelpText>
        <label>Skip for isFuture execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Skip_for_isQueueable_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked then trigger will be skipped for execution</description>
        <inlineHelpText>If this field is checked then trigger will be skipped for execution</inlineHelpText>
        <label>Skip for isQueueable Execution</label>
        <type>Checkbox</type>
    </fields>
    <label>IAM Trigger Switch</label>
    <pluralLabel>IAM Trigger Switches</pluralLabel>
</CustomObject>